--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,10 @@
   <nav>
     <ul>
       <li>
-        <a href="./1-gallery.html">gallery</a>
+        <a href="./1-gallery.html">Gallery</a>
       </li>
       <li>
-        <a href="./2-form.html">form</a>
+        <a href="./2-form.html">Form</a>
       </li>
     </ul>
   </nav>
