--- a/src/2-form.html
+++ b/src/2-form.html
@@ -11,6 +11,7 @@
     <section>
       <a href="./index.html">Go to home</a>
       <h1>Welcome to page 2</h1>
+      <script type="module" src="./js/2-form.js"></script>
     </section>
   </body>
 </html>
