--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page 3</title>
+
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <section>
-      <a href="./index.html">Go to home</a>
-      <h1>Welcome to page 3</h1>
+      <a class="home" href="./index.html">Go to home</a>
 
       <ul class="gallery"></ul>
 
