--- a/src/2-form.html
+++ b/src/2-form.html
@@ -10,7 +10,20 @@
   <body>
     <section>
       <a href="./index.html">Go to home</a>
-      <h1>Welcome to page 2</h1>
+      
+      <form class="feedback-form" autocomplete="off">
+        <label>
+          Email
+          <input type="email" name="email" autofocus />
+        </label>
+        <label>
+          Message
+          <textarea name="message" rows="8"></textarea>
+        </label>
+        <button type="submit">Submit</button>
+      </form>
+      
+
       <script type="module" src="./js/2-form.js"></script>
     </section>
   </body>
